--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-teleflow",
   "version": "0.1.0",
-  "description": "",
+  "description": "n8n community node for TeleFlow API",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "teleflow",
+    "telephony",
+    "voip"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/dualtone-ben/n8n-nodes-teleflow",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Ben",
+    "email": "ben@dualtone.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/dualtone-ben/n8n-nodes-teleflow.git"
   },
   "engines": {
     "node": ">=20.15"
@@ -33,12 +36,10 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
+      "dist/credentials/TeleFlowApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/TeleFlow/TeleFlow.node.js"
     ]
   },
   "devDependencies": {
