--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "engines": {
     "node": ">=20.15"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
     "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "npm build && npm lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
   },
   "files": [
     "dist"
@@ -50,7 +50,8 @@
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
   },
-  "peerDependencies": {
+  "dependencies": {
+    "n8n-core": "~1.0.0",
     "n8n-workflow": "*"
   }
 }
