--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "n8n-nodes-teleflow",
-  "version": "1.2.0",
-  "description": "n8n community node for TeleFlow API",
+  "version": "1.3.0",
+  "description": "n8n node to interact with TeleFlow API",
   "keywords": [
     "n8n-community-node-package",
     "teleflow",
-    "telephony",
-    "voip"
+    "n8n"
   ],
   "license": "MIT",
   "homepage": "https://github.com/dualtone-ben/n8n-nodes-teleflow",
@@ -18,10 +17,7 @@
     "type": "git",
     "url": "https://github.com/dualtone-ben/n8n-nodes-teleflow.git"
   },
-  "engines": {
-    "node": ">=20.15"
-  },
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
